# RoseWish

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  project.py  pyproject.toml  pyrightconfig.json  ruff.json  ruff_errors.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  setup.md
src/: main.py
src/config/: settings.py
src/core/: event_bus.py  registry.py
src/engine/: game.py
src/entities/: character.py  miss_lovely.py  mr_lover.py
src/services/: audio_service.py  render_service.py
src/story/: narrative_director.py
src/ui/: background.py  dialogue_box.py
src/utils/: constants.py  particles.py  thoughts.py
src/world/: entity.py
